# electron-gift-book

./: .gitignore  README.md  TAURI_MIGRATION_GUIDE.md  electron-builder.json5  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  电子礼金开发步骤.md  电子礼金簿详细功能需求v2.md  调整说明文档.md  阶段性成果总结.md
.trae/documents/: PDF导出优化计划.md  PDF页眉页脚调整计划.md  Phase 1_ 框架搭建与原型初始化.md  Phase 3_ 竖排展示与UI美化执行计划.md  add_about_button_plan.md  fix-dual-app-launch.md  plan_20260212_023625.md  plan_20260213_033909.md  tauri-pdf-export-plan.md  tauri_system_fonts_plan.md  ui_optimization_plan.md  代码审核优化计划.md  优化导入性能.md  实现搜索功能.md  导入导出功能调整计划.md  快速定位页码功能计划.md  添加桌面快捷方式提示和系统启动菜单快捷方式.md  电子礼金簿功能增强计划.md  电子礼金簿开发详细计划.md  电子礼金簿项目README文件.md  电子礼金簿项目下一阶段工作规划.md  电子礼金簿项目代码修复计划.md  缩放显示问题修复计划.md  项目清理计划.md
electron/: database.ts  main.ts  pdfGeneratorService.ts  pdfTemplateConfig.ts  preload.ts
electron-gift-book/: .gitignore  PDF 模板测量指南.md  ai-tasks.json  electron-builder.json5  package-lock.json  package.json  vite.config.ts  vitest.config.ts
electron-gift-book/dist-electron/: main.cjs  main.js  main.js.map  preload.mjs  preload.mjs.map
electron-gift-book/electron/: database.ts  main.ts  preload.ts
electron-gift-book/electron-gift-book/: .gitignore  package.json  vite.config.ts  项目介绍文档.md
electron-gift-book/src-tauri/: Cargo.toml  (+1 more)
public/: print.css  print.html
scripts/: optimizeTemplates.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  models.rs
(+100 files in other folders)
